# AIEC01

00_AIEC_Quicklinks/: README.md
00_Docs/Certification Challenge/: README.md
00_Docs/Modules/04_Multi-Agents_and_Deep_Research/: README.md
00_Docs/Modules/05_Synthetic_Data_Generation_for_Evals/: README.md
00_Docs/Modules/06_Agentic_RAG_Evaluation/: README.md
01_Dense_Vector_Retrieval/: 01_Cat_Health_Vector_RAG_LangChain_Qdrant.ipynb
02_Agentic_RAG_LangGraph_LangChain/: 01_Cat_Health_Agentic_RAG_LangGraph_LangChain.ipynb
03_Agent_Memory_LangGraph_LangChain/: 01_Cat_Health_Agent_Memory_LangGraph_LangChain.ipynb
04_Multi_Agent_Systems/: 01_Cat_Health_Deep_Research_Multi_Agent_LangChain_LangGraph.ipynb
05_Synthetic_Data_Generation_for_RAG_Evals/: 01_Cat_Health_Synthetic_Data_Generation_Ragas_LangSmith.ipynb
06_Agentic_RAG_Evaluation/: 01_Metal_Price_Agent_Evaluation_Ragas_LangGraph.ipynb  README.md
07_Advanced_Retrievers/: 01_Cat_Health_Advanced_Retrieval.ipynb  README.md
08_MCP/: README.md
08_MCP/app/: tools.py
09_Agent_Servers/: README.md  langgraph.json  pyproject.toml
09_Agent_Servers/app/: state.py
09_Agent_Servers/frontend/: package-lock.json  package.json
10_LLM_Servers/: .env.example  README.md  endpoint_slammer.ipynb  pyproject.toml  ragas_evaluation.ipynb
12_Production_Agent_Patterns/: README.md
14_multimodal_rag/: multimodal_rag.ipynb
15_Reasoning_Model_Fine_Tuning/: .gitignore  01_Reasoning_Fine_Tuning_Unsloth_GRPO.ipynb  ColabVersion__01_Reasoning_Fine_Tuning_Unsloth_GRPO.ipynb  README.md  pyproject.toml
(+5 files in other folders)
